Quorum3/Library/Tests/TypeChecker/Pass/TextReplace.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        output t:Replace("lo", "p")
        output p:Replace("lo", "p")
    end
end